# gitdot

./: .dockerignore  .gitdot-ci.toml  CLAUDE.md  Cargo.toml  README.md  justfile
gitdot-api/: CLAUDE.md  Cargo.toml  README.md
gitdot-api/derive/: Cargo.toml
gitdot-api/src/: resource.rs
gitdot-api/src/endpoint/: auth.rs  organization.rs  repository.rs  review.rs  user.rs
gitdot-api/src/endpoint/auth/: account.rs  email.rs
gitdot-api/src/endpoint/migration/: github.rs  list_migrations.rs
gitdot-api/src/endpoint/organization/: add_member.rs  add_organization_member.rs  create_organization.rs  get_organization.rs  list_organization_members.rs  list_organization_repositories.rs  (+4 more)
gitdot-api/src/resource/: common.rs  migration.rs  organization.rs  repository.rs  user.rs
gitdot-auth/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md
gitdot-auth/src/: app.rs  dto.rs  extract.rs  handler.rs  lib.rs  middleware.rs
gitdot-auth/src/app/: error.rs  settings.rs  state.rs
gitdot-auth/src/handler/: account.rs  email.rs  logout.rs  refresh_session.rs
gitdot-auth/src/middleware/: observability.rs
gitdot-axum/: CLAUDE.md  Cargo.toml  README.md
gitdot-axum/src/: error.rs  extract.rs  lib.rs  middleware.rs
gitdot-axum/src/extract/: client_ip.rs  principal.rs  user_agent.rs
gitdot-axum/src/middleware/: observability.rs  rate_limit.rs  vercel.rs
gitdot-cli/: CLAUDE.md  Cargo.toml  README.md
gitdot-cli/src/: cli.rs  client.rs  command.rs  config.rs  lib.rs  util.rs
gitdot-cli/src/client/: credential.rs  git.rs  gitdot.rs
gitdot-cli/src/command/: login.rs  review.rs  save.rs  status.rs
gitdot-cli/src/config/: runner.rs  user.rs
gitdot-cli/src/util/: review.rs  url.rs
gitdot-config/: Cargo.toml  README.md
gitdot-consumer/: CLAUDE.md  Cargo.toml  Dockerfile  README.md
gitdot-consumer/src/: app.rs  lib.rs
gitdot-consumer/src/app/: bootstrap.rs  runner.rs  settings.rs  state.rs
gitdot-core/: Cargo.toml  README.md
gitdot-core/derive/: Cargo.toml
gitdot-core/migrations/: 20260507000000_add_repository_description.down.sql  20260507000000_add_repository_description.up.sql  20260507010000_add_repository_stars.down.sql  20260507010000_add_repository_stars.up.sql  20260511000000_add_readme_to_organizations.down.sql  20260511000000_add_readme_to_organizations.up.sql  20260511000001_add_links_to_organizations.down.sql  20260511000001_add_links_to_organizations.up.sql  20260512000000_add_role_description_to_organization_members.down.sql  20260512000000_add_role_description_to_organization_members.up.sql  20260512000001_add_location_to_organizations.down.sql  20260512000001_add_location_to_organizations.up.sql  20260512000003_add_readonly_flag_in_repository.down.sql  20260512000003_add_readonly_flag_in_repository.up.sql  20260512000005_extract_webhook_schema.down.sql  20260512000005_extract_webhook_schema.up.sql  20260512000006_add_repository_ids_to_migration_repositories.down.sql  20260512000006_add_repository_ids_to_migration_repositories.up.sql  20260513000000_create_repository_stars.down.sql  20260513000000_create_repository_stars.up.sql  20260515000000_drop_settings_columns.down.sql  20260515000000_drop_settings_columns.up.sql  20260516000000_create_commit_filters.down.sql  20260516000000_create_commit_filters.up.sql  20260517000000_drop_repositories_owner_name.down.sql  20260517000000_drop_repositories_owner_name.up.sql  20260519000000_add_commits_author_created_id_index.down.sql  20260519000000_add_commits_author_created_id_index.up.sql  20260525000000_create_user_emails.down.sql  20260525000000_create_user_emails.up.sql  20260526000000_backfill_commit_author_id.down.sql  20260526000000_backfill_commit_author_id.up.sql  20260528000001_add_image_updated_at.down.sql  20260528000001_add_image_updated_at.up.sql  20260528000002_add_missing_indexes.down.sql  20260528000002_add_missing_indexes.up.sql  20260528000003_add_commits_repo_ref_created_index.down.sql  20260528000003_add_commits_repo_ref_created_index.up.sql  20260530000000_email_verification_by_user_id.down.sql  20260530000000_email_verification_by_user_id.up.sql  (+6 more)
gitdot-core/migrations/clickhouse/: 0001_create_database.down.sql  0001_create_database.up.sql  0002_create_client_performance.down.sql  0002_create_client_performance.up.sql
gitdot-core/src/: client.rs  dto.rs  error.rs  lib.rs  model.rs  repository.rs  service.rs  util.rs
gitdot-core/src/client/: clickhouse.rs  email.rs  git.rs  git_http.rs  github.rs  image.rs  kafka.rs  r2.rs  redis.rs  s2.rs  secret.rs  slack_bot.rs  token.rs
gitdot-core/src/dto/: client.rs  common.rs  domain.rs  metrics.rs  migration.rs
gitdot-core/src/error/: client.rs  domain.rs
gitdot-core/src/model/: core.rs  metrics.rs  webhook.rs
gitdot-core/src/repository/: auth.rs  ci.rs  core.rs  migration.rs  test_common.rs  webhook.rs
gitdot-core/src/service/: authentication.rs  authorization.rs  core.rs  metrics.rs  migration.rs  test_client.rs  test_common.rs  test_repository.rs  webhook.rs
gitdot-core/src/util/: auth.rs  cursor.rs  git.rs  image.rs  template.rs  user.rs
gitdot-core/templates/email/: code.html
gitdot-core/templates/gitignore/: node.gitignore  python.gitignore
gitdot-core/templates/license/: apache-2.0.txt
gitdot-metrics/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md
gitdot-metrics/src/: app.rs  handler.rs  lib.rs
gitdot-metrics/src/app/: bootstrap.rs  error.rs  settings.rs  state.rs
gitdot-metrics/src/handler/: metrics.rs
gitdot-server/: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md
gitdot-server/src/: app.rs  dto.rs  extract.rs  handler.rs  lib.rs
gitdot-server/src/app/: bootstrap.rs  error.rs  response.rs  settings.rs  state.rs
gitdot-server/src/dto/: build.rs  migration.rs  organization.rs  question.rs  repository.rs  review.rs  user.rs  webhook.rs
gitdot-server/src/extract/: auth.rs  github.rs  service.rs  slack_bot.rs
gitdot-server/src/handler/: git_http.rs  organization.rs  repository.rs  review.rs  user.rs  webhook.rs
gitdot-server/src/middleware/: observability.rs
(+636 files in other folders)
