[workspace]
resolver = "3"
members = [
  "gitdot-api",
  "gitdot-api/derive",
  "gitdot-auth",
  "gitdot-cli",
  "gitdot-config",
  "gitdot-consumer",
  "gitdot-core",
  "gitdot-core/derive",
  "gitdot-server",
  "s2-api",
  "s2-common",
  "s2-sdk",
  "s2-server",
]

[workspace.package]
license = "Apache-2.0"
authors = ["Mikkel Kim <mikkel@gitdot.io>", "Paul Bae <paul@gitdot.io>"]
repository = "https://gitdot.io/bkdevs/gitdot"
homepage = "https://gitdot.io"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
# shared deps (merged versions)
async-stream = "0.3"
async-trait = "0.1.89"
aws-config = "1"
aws-credential-types = "1"
axum = "0.8"
axum-server = "0.8"
base62 = "2.2.3"
base64 = "0.22"
base64ct = "1.8"
blake3 = "1.8"
bytes = "1.11"
bytesize = "2.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap = "4.5"
compact_str = "0.9"
crc32fast = "1.4"
dashmap = "6.1"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2", features = ["pem", "pkcs8"] }
enum-ordinalize = "4.3"
enumset = "1.1"
eyre = "0.6"
figment = { version = "0.10.19", features = ["env"] }
flate2 = "1.1"
futures = "0.3.32"
git2 = "0.20.3"
gitdot-api = { path = "gitdot-api", version = "0.1.0" }
gitdot-config = { path = "gitdot-config", version = "0.1.0" }
gitdot-core = { path = "gitdot-core" }
gitdot-core-derive = { path = "gitdot-core/derive" }
hex = "0.4.3"
http = "1.4.0"
humantime = "2.3"
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp"
] }
indexmap = "2.13"
itertools = "0.14"
jsonwebtoken = "10.2.0"
mimalloc = "0.1"
mime = "0.3"
mockall = "0.14.0"
nutype = { version = "0.6.2", features = ["serde"] }
object_store = "0.12.5"
parking_lot = "0.12"
proptest = "1.10"
prost = "0.14"
prost-build = "0.14"
rand = "0.10"
gcp_auth = "0.12"
rcgen = { version = "0.14", default-features = false, features = [
  "aws_lc_rs",
  "crypto",
  "pem"
] }
rdkafka = { version = "0.36", default-features = false, features = [
  "cmake-build",
  "ssl-vendored",
  "libz",
  "tokio"
] }
reqwest = { version = "0.13.1", features = ["json", "query"] }
resvg = { version = "0.44", default-features = false }
rkyv = "0.8"
rstest = "0.26"
rustls = "0.23"
s2-api = { path = "s2-api", version = "0.27" }
s2-common = { path = "s2-common", version = "0.28" }
s2-sdk = { path = "s2-sdk", version = "0.24" }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
slatedb = "0.10"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "ipnetwork",
  "json",
  "postgres",
  "runtime-tokio",
  "uuid"
] }
strum = "0.27"
tempfile = "3.24.0"
thiserror = "2.0.17"
time = "0.3"
tiny-skia = "0.11"
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7.18", features = ["io"] }
toml = "1.0"
tower = "0.5.2"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["serde", "v4"] }
zstd = "0.13"

[patch.crates-io]
slatedb = { git = "https://github.com/slatedb/slatedb", rev = "9efc9f55a31d5634c5685ae1580971715c03bd37" }
