[package]
name = "gitdot-api"
version = "0.1.1"
description = "Shared API contract types and endpoint definitions for gitdot."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/gitdot-api"
keywords = ["gitdot", "api"]
categories = ["api-bindings"]
exclude = ["CLAUDE.md"]

[dependencies]
chrono = { workspace = true }
gitdot-api-derive = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
