[package]
name = "gitdot-auth"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "gitdot-auth"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
figment = { workspace = true }
gitdot-api = { workspace = true }
gitdot-axum = { workspace = true }
gitdot-core = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true, features = [
  "cors",
  "request-id",
  "timeout",
  "trace"
] }
tracing = { workspace = true }
uuid = { workspace = true }
