[package]
name = "gitdot-cli"
version = "0.1.0"
edition = "2024"
description = ""

[[bin]]
name = "dot"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
dirs-next = "2.0.0"
futures = { workspace = true }
git2 = { workspace = true }
gitdot-api = { workspace = true }
gitdot-config = { workspace = true }
itertools = "0.14.0"
reqwest = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
s2-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tombi-config = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-diagnostic = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-formatter = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-linter = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
tombi-schema-store = { git = "https://github.com/tombi-toml/tombi", rev = "1517a938d105bfffd7515011b0844df5305121ea" }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
