[package]
name = "gitdot-cli"
version = "0.1.0"
description = "Command-line interface for gitdot"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.rs/gitdot-cli"
keywords = ["gitdot", "cli", "git"]
categories = ["command-line-utilities", "development-tools"]
exclude = [".env", ".env.example", "CLAUDE.md"]

[[bin]]
name = "dot"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
clap = { version = "4.5.54", features = ["derive"] }
dirs-next = "2.0.0"
dotenvy = { workspace = true }
figment = { workspace = true, features = ["toml"] }
futures = { workspace = true }
git2 = { workspace = true }
gitdot-api = { workspace = true }
gitdot-config = { workspace = true }
itertools = "0.14.0"
owo-colors = "4.3.0"
reqwest = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
s2-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
