[package]
name = "gitdot-config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
