[package]
name = "gitdot-consumer"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "gitdot-consumer"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
gitdot-axum = { workspace = true }
gitdot-core = { workspace = true }
rdkafka = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
