[package]
name = "gitdot-core"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = "1.129.0"
base62 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clickhouse = { version = "0.15.0", features = ["chrono", "rustls-tls", "uuid"] }
crc32fast = { workspace = true }
email_address = "0.2.9"
futures = { workspace = true }
gcp_auth = { workspace = true }
git2 = { workspace = true }
gitdot-config = { workspace = true }
gitdot-core-derive = { workspace = true }
google-cloud-gax = "1.7.0"
google-cloud-metadata = "0.5.1"
google-cloud-secretmanager-v1 = "1.5.0"
hex = { workspace = true }
hmac = "0.12"
http = { workspace = true }
image = { workspace = true }
ipnetwork = "0.20"
jsonwebtoken = { workspace = true }
lettre = { workspace = true }
nutype = { workspace = true }
octocrab = "0.49.5"
rand = { workspace = true }
rdkafka = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
resvg = { workspace = true }
s2-sdk = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, features = ["ipnetwork"] }
thiserror = { workspace = true }
tiny-skia = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[features]
# Gates DB-backed repository tests (require a running Postgres).
# Excluded from a plain `cargo test`.
# Run with `DATABASE_URL=local-url cargo test -p gitdot-core --features db-tests`.
db-tests = []

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }
sqlx = { workspace = true, features = ["macros", "migrate"] }
