[package]
name = "gitdot-metrics"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "gitdot-metrics"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
figment = { workspace = true }
gitdot-axum = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true, features = [
  "cors",
  "request-id",
  "timeout",
  "trace"
] }
tracing = { workspace = true }
