[package]
name = "gitdot-metrics"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[[bin]]
name = "gitdot-metrics"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros"] }
figment = { workspace = true }
gitdot-api = { workspace = true }
gitdot-axum = { workspace = true }
gitdot-core = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = [
  "cors",
  "request-id",
  "timeout",
  "trace"
] }
tracing = { workspace = true }
