[package]
name = "gitdot-server"
version = "0.1.0"
edition = "2024"
default-run = "gitdot-server"

[[bin]]
name = "gitdot-server"
path = "src/bin/main.rs"

[[bin]]
name = "gitdot-keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { version = "0.8.8", features = ["macros", "multipart"] }
base64 = { workspace = true }
base64ct = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
ed25519-dalek = { workspace = true }
figment = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gitdot-api = { workspace = true }
gitdot-core = { workspace = true }
http = { workspace = true }
image = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0", features = ["trace"] }
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
rand = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true, features = ["aws-lc-rs"] }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
tower-http = { version = "0.6.8", features = [
  "cors",
  "request-id",
  "timeout",
  "trace"
] }
tracing = "0.1"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true }
