[package]
name = "gitdot-server"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
default-run = "gitdot-server"

[[bin]]
name = "gitdot-server"
path = "src/bin/main.rs"

[[bin]]
name = "gitdot-keygen"
path = "src/bin/keygen.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
base64 = { workspace = true }
base64ct = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
figment = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
git2 = { workspace = true }
gitdot-api = { workspace = true }
gitdot-axum = { workspace = true }
gitdot-core = { workspace = true }
http = { workspace = true }
image = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }
tower_governor = { workspace = true }
tower-http = { workspace = true, features = [
  "cors",
  "request-id",
  "timeout",
  "trace"
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
