[package]
name = "gitdot-api-derive"
version = "0.1.0"
description = "Derive macros for gitdot-api."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gitdot-api-derive"
keywords = ["gitdot", "api"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
